# Shameless

./: .env.example  .gitignore  .pre-commit-config.yaml  01_PLANTEAMIENTO.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  kernel-metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.windsurf/rules/: architecture.md  context.md  rules.md
Sentiment_Analyser/: __init__.py  cli.py
Sentiment_Analyser/api/: __init__.py  main.py  schemas.py  services.py
Sentiment_Analyser/config/: __init__.py  settings.py
Sentiment_Analyser/deepseek/: __init__.py  analyzer.py
Sentiment_Analyser/models/: __init__.py  model_loader.py
Sentiment_Analyser/models/inference/: __init__.py  sentiment_analyzer.py
Sentiment_Analyser/models/preprocessing/: text_preprocessor.py
Sentiment_Analyser/notebooks/: kernel-metadata.json  sentiment_analysis.ipynb
Sentiment_Analyser/scraper/: __init__.py  schemas.py
Sentiment_Analyser/scraper/collectors/: __init__.py  bluesky_collector.py  twitter_collector.py
Sentiment_Analyser/scraper/storage/: __init__.py  data_storage.py
Sentiment_Analyser/storage/: __init__.py  user_db.py
Sentiment_Analyser/utils/: __init__.py  logger.py
examples/: kaggle_model_usage.py
frontend/: app.js  index.html  styles.css
scripts/: example_usage.py
tests/: __init__.py  test_preprocessor.py
